--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-VITE_BACKEND_URL = 'http://localhost:3000'
+VITE_BACKEND_URL = 'https://doctor-appointment-backend-iota.vercel.app/'
 VITE_RAZORPAY_KEY_ID = "rzp_test_yCdJquTC727i5J"
